:white_check_mark: Scrollbar stylized + Added links to navbar + Info personal works responsive + Navbar works responsive + Footer error fixed

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,53 @@
     transform: rotate(360deg);
   }
 }
+
+a {
+  color: #FFF;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+  width: 10px;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
+
+::-webkit-scrollbar:horizontal {
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 1em;
+  border: none;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 1em;
+  border: none;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 1em;
+  border: none;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 1em;
+  background: rgba(205, 205, 205, 0.5);
+}
